# open_cv_labs

./: CMakeLists.txt  lab6.cpp  lab7.cpp  lab8.cpp
